Add personal modifications

--- a/lineageos.env
+++ b/lineageos.env
@@ -1,7 +1,9 @@
-BRANCH_NAME=lineage-18.0
+BRANCH_NAME=lineage-18.1
 DEVICE_LIST=raphael
 SIGN_BUILDS=true
+SIGNATURE_SPOOFING=restricted
+CUSTOM_PACKAGES="GmsCore GsfProxy FakeStore FDroid FDroidPrivilegedExtension MozillaNlpBackend NominatimNlpBackend additional_repos.xml com.google.android.maps "
 INCLUDE_PROPRIETARY=false
-CCACHE_SIZE=60G
-WITH_SU=true
+CCACHE_SIZE=25G
+WITH_SU=false
 RELEASE_TYPE=UNOFFICIAL
