--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     env_file:
       ./lineageos.env
     volumes:
-      - /raid/lineageos/lineage:/srv/src
-      - /raid/lineageos/zips:/srv/zips
-      - /raid/lineageos/logs:/srv/logs
-      - /raid/lineageos/ccache:/srv/ccache
-      - /raid/lineageos/keys:/srv/keys
+      - /home/oynqr/lineageos/src:/srv/src
+      - /home/oynqr/lineageos/zips:/srv/zips
+      - /home/oynqr/lineageos/logs:/srv/logs
+      - /home/oynqr/lineageos/ccache:/srv/ccache
+      - /home/oynqr/lineageos/certs:/srv/keys
       - ./manifests:/srv/local_manifests
     network_mode: "host"
